fix issue: tracklist row hard to select on mobile version

--- a/src/css/track-list.css
+++ b/src/css/track-list.css
@@ -9,7 +9,8 @@
   margin-left: 18px;
 }
 
-.app--mobile .row__title {
+.app--mobile .row__title,
+.app--mobile .row__subtitle {
   pointer-events: none;
 }
 
